<resources>
    <string name="app_name">Cleandia</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="upload_image">Upload Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Don\'t Have an Account? SignUp</string>
    <string name="login_account">Already have an account? LogIn</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agricultural">Agricultural</string>
    <string name="types_of_waste">Types of waste</string>
    <string name="comment">Comment</string>
    <string name="your_complaint">Your Complaint</string>
    <string name="add_title">Add Title</string>
    <string name="area_name">Area Name</string>
    <string name="add_message">Add Message</string>
    <string name="add_photos">Add Photos</string>
    <string name="submit">Submit</string>
    <string name="h_ago">h ago</string>
    <string name="time">time</string>
    <string name="confirmed">Confirmed</string>
    <string name="comments">Comments</string>
    <string name="ngo_name">ngo name</string>
    <string name="event">Event</string>
    <string name="event_name">event name</string>
    <string name="website">Website</string>
    <string name="website_name">www.ngo.com</string>
    <string name="address">Address</string>
    <string name="ngo_address">Name, Landmark, City, State, Pincode</string>
    <string name="mail">Mail</string>
    <string name="email_address">ngo@example.com</string>
    <string name="contact">Contact</string>
    <string name="contact_no">+91 0000000000</string>
    <string name="register">Register</string>
    <string name="waste">Waste</string>
    <string name="waste_type">Waste Type</string>
    <string name="disposal_method">Disposal Method</string>
    <string name="disposal_content">Disposal Content</string>
    <string name="waste_info">Waste Info</string>
    <string name="your_name">Your name</string>
    <string name="or_with">Or with</string>
</resources>