<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toEndOf="@id/profile1"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="user_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/h_ago" />
                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details"
                android:layout_marginVertical="10dp"
                android:adjustViewBounds="true"
                android:padding="1dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/post5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/address"
                android:layout_below="@id/details"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edittext_bg" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postImage"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="address" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="case" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toEndOf="@id/cases"
                    android:text="@string/confirmed" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/comment"
                    app:srcCompat="@drawable/add_one" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/comments"
                    android:textColor="@color/apple_green" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>